--- a/chef/cookbooks/postgres-db-setup/templates/default/postgresql.conf.erb
+++ b/chef/cookbooks/postgres-db-setup/templates/default/postgresql.conf.erb
@@ -40,9 +40,9 @@
 
 data_directory = '/var/lib/postgresql/9.1/main'		# use data in another directory
 					# (change requires restart)
-hba_file = <%= @HBA_FILE %>	# host-based authentication file
+hba_file = '<%= @HBA_FILE %>'	# host-based authentication file
 					# (change requires restart)
-ident_file = <%= @IDENT_FILE %>	# ident configuration file
+ident_file = '<%= @IDENT_FILE %>'	# ident configuration file
 					# (change requires restart)
 
 # If external_pid_file is not explicitly set, no extra PID file is written.
